Add support for 'group' syntax

--- a/bincompat-forward.whitelist.conf
+++ b/bincompat-forward.whitelist.conf
@@ -467,6 +467,10 @@ filter {
         {
              matchName="scala.concurrent.forkjoin.ForkJoinPool.helpJoinOnce"
              problemName=IncompatibleResultTypeProblem
-        }
+        },
+        {
+             matchName="scala.reflect.internal.StdNames#Keywords.GROUPkw"
+             problemName=MissingMethodProblem
+       }
     ]
 }
